<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/edit_event_games_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/games_caps"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:background="@color/dark_gray" />

                <CheckBox
                    android:id="@+id/edit_event_games_ssb64"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/ssb64" />

                <CheckBox
                    android:id="@+id/edit_event_games_melee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/melee" />

                <CheckBox
                    android:id="@+id/edit_event_games_brawl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/brawl" />

                <CheckBox
                    android:id="@+id/edit_event_games_pm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pm" />

                <CheckBox
                    android:id="@+id/edit_event_games_smash4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/smash4" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/edit_profile_save_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:text="@string/save"
        android:textColor="@color/white"
        android:onClick="saveEvent"
        android:background="@color/gc_purple" />

</RelativeLayout>