<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/less_white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_event_event_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/event_title" />

            <RelativeLayout
                android:id="@+id/edit_event_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:id="@+id/edit_event_location_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/event_location_caps"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/edit_event_location_underline"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_below="@id/edit_event_location_title"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/dark_gray" />

                <LinearLayout
                    android:id="@+id/edit_event_location_buttons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@id/edit_event_location_underline">

                    <Button
                        android:id="@+id/edit_event_location_map_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/set_on_map"
                        android:onClick="setLocationMap" />

                    <Button
                        android:id="@+id/edit_event_location_address_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/enter_as_address"
                        android:onClick="setLocationAddress" />
                </LinearLayout>

                <TextView
                    android:id="@+id/edit_event_location_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/edit_event_location_buttons"
                    android:layout_marginTop="8dp"
                    android:textSize="18sp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/edit_event_games_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/games_caps"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:background="@color/dark_gray" />

                <CheckBox
                    android:id="@+id/edit_event_games_ssb64"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/ssb64" />

                <CheckBox
                    android:id="@+id/edit_event_games_melee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/melee" />

                <CheckBox
                    android:id="@+id/edit_event_games_brawl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/brawl" />

                <CheckBox
                    android:id="@+id/edit_event_games_pm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pm" />

                <CheckBox
                    android:id="@+id/edit_event_games_smash4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/smash4" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:text="@string/time_caps" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:background="@color/dark_gray" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_date_time"
                    android:onClick="setDateTime" />
                
                <TextView
                    android:id="@+id/edit_event_time_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:text="@string/other_caps" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:background="@color/dark_gray" />

                <EditText
                    android:id="@+id/edit_event_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/event_description" />

                <CheckBox
                    android:id="@+id/edit_event_public"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/public_" />

                </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="52dp" />
            
        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/edit_event_save_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:text="@string/save"
        android:textColor="@color/white"
        android:onClick="saveEvent"
        android:background="@color/gc_purple" />


</RelativeLayout>