<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.eric.ssbl.LoginActivity" >

    <ImageView
        android:id="@+id/ssb_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:adjustViewBounds="true"
        android:src="@drawable/stuff2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:layout_below="@id/ssb_title" >

        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/darker_white" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/darker_white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login"
            android:onClick="accountLogin"
            android:textColorHint="@color/white" />

        <CheckBox
            android:id="@+id/login_remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:textColor="@color/white" />
            
<!--         <Space -->
<!--             android:layout_width="match_parent" -->
<!--             android:layout_height="40dp" /> -->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/register"
            android:onClick="accountRegister"
            android:textColorHint="@color/white" />
    </LinearLayout>

</RelativeLayout>