<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gc_gray">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/profile_cover_photo"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/cover_photo"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true" />

            <LinearLayout
                android:id="@+id/profile_headers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/profile_cover_photo"
                android:gravity="center"
                android:paddingTop="16dp">


                <TextView
                    android:id="@+id/profile_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username_hint"
                    android:textStyle="bold"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/profile_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/password_hint"
                    android:gravity="center"
                    android:textColor="#FF707070"/>

                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginTop="8dp"-->
                    <!--android:text="what is this"-->
                    <!--android:textColor="#FF909090" />-->

            </LinearLayout>

            <ImageView
                android:id="@+id/profile_icon"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/honey"
                android:layout_centerHorizontal="true"
                android:layout_above="@id/profile_headers"
                android:layout_marginBottom="-16dp" />

            <LinearLayout
                android:id="@+id/profile_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_headers"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/profile_games"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:paddingRight="16dp"
                    android:paddingLeft="16dp"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/profile_bio_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:paddingTop="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/profile_stranger_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_details"
                android:paddingTop="16dp"
                android:paddingBottom="12dp"
                android:visibility="gone">

                <ImageButton
                    android:id="@+id/profile_chat_button"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/blue_chat_button"
                    android:onClick="startConversation"
                    android:background="@null"
                    android:adjustViewBounds="true"
                    android:cropToPadding="false"
                    android:scaleType="fitXY"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/profile_chat_button"
                    android:paddingTop="8dp"
                    android:text="@string/message"/>

                <ImageButton
                    android:id="@+id/profile_stranger_friend_button"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_toLeftOf="@id/profile_chat_button"
                    android:layout_toStartOf="@id/profile_chat_button"
                    android:layout_marginRight="44dp"
                    android:layout_marginEnd="44dp"
                    android:onClick="friendButton"
                    android:background="@null"
                    android:adjustViewBounds="true"
                    android:cropToPadding="false"
                    android:scaleType="fitXY" />

                <TextView
                    android:id="@+id/profile_stranger_friend_button_caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/profile_stranger_friend_button"
                    android:layout_alignLeft="@id/profile_stranger_friend_button"
                    android:layout_alignStart="@id/profile_stranger_friend_button"
                    android:layout_marginLeft="-2dp"
                    android:layout_marginStart="-2dp"
                    android:paddingTop="8dp"/>

                <ImageButton
                    android:id="@+id/profile_stranger_view_friends_button"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_toRightOf="@id/profile_chat_button"
                    android:layout_toEndOf="@id/profile_chat_button"
                    android:layout_marginLeft="44dp"
                    android:layout_marginStart="44dp"
                    android:onClick="viewFriends"
                    android:src="@drawable/orange_search_button"
                    android:background="@null"
                    android:adjustViewBounds="true"
                    android:cropToPadding="false"
                    android:scaleType="fitXY" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/profile_stranger_view_friends_button"
                    android:layout_alignLeft="@id/profile_stranger_view_friends_button"
                    android:layout_alignStart="@id/profile_stranger_view_friends_button"
                    android:layout_marginLeft="-8dp"
                    android:layout_marginStart="-8dp"
                    android:text="@string/view_friends"
                    android:paddingTop="8dp"/>

            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>